# alliander-course-design-patterns

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/design_patterns/factory/: main.py  pizza.py  pizza_start.py  pizza_store.py  pizza_story_simplified_python.py  simple.py
src/design_patterns/observer/: first_implementation.py  observers.py  subjects.py  weather_station.py
src/design_patterns/strategy/: behaviors.py  duck_simulator.py  ducks.py
src/design_patterns/template_method/: 01_coffee_and_tea.py  02_caffeine_beverage.py  03_hooks.py  04_base_class.py
